# busypie

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: build-and-test.yml  bump-version.yml  publish-to-pypi.yml  pythonpackage.yml  quality.yml  sem-pr.yml  test.yml
backports/: __init__.py
backports/asyncio/: __init__.py  runners.py
busypie/: __init__.py  awaiter.py  checker.py  condition.py  core.py  durations.py  errors.py  func.py  runner.py  time.py  types.py
docs/: requirements.txt
docs/source/: assert.rst  async.rst  conf.py  duration.rst  exception.rst  index.rst  install.rst  polling.rst  quickstart.rst  timeout.rst  times.rst  wait.rst
tests/: sleeper.py  test_asserted.py  test_async.py  test_basic.py  test_condition.py  test_condition_exec.py  test_defaults.py  test_description.py  test_exception.py  test_polling.py  test_sugar.py  test_time.py  test_wait.py
