[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "busypie"
version = "0.5.1"
description = "Easy and expressive busy-waiting for Python"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "Apache License 2.0"}
keywords = ["busy", "wait", "tdd", "test", "builder", "sleep", "pytest"]
authors = [
    {name = "Eli Segal", email = "eli.segal@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rockem/busypie"

[project.optional-dependencies]
test = [
    "pytest==7.4.4",
    "pytest-asyncio==0.21.1",
    "pytest-timeout==2.4.0",
    "dataclasses==0.6",
]

[tool.setuptools]
packages = {find = {exclude = ["tests*"]}}
